<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.steri.fysiodossier.ScreeningFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag1"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="5dp"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/vraag2"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch2"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag3"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="5dp"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch3"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag4"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch4"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag5"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch5"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag6"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag7"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch7"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag8"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch8"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vraag9"
                    android:padding="5dp"/>

                <Switch
                    android:layout_width= "wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="@string/On"
                    android:textOff="@string/Off"
                    android:checked="false"
                    android:id="@+id/switch9"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
